[tool.poetry]
name = "caesar-cipher"
version = "0.1.0"
description = ""
authors = ["BEN <benjamin.hill28@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.0.7"
nltk = "^3.5"
pytest = "^6.2.2"
cryptography = "^3.4.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
